[change][controllers][routes] 1. modify getFiles api (change params to query strings) 2. file: change original patch api to two different patch apis(update file/ update signature title & sign status) 3. file: remove query string params from post api 4. add key code to success response
