# routes/file.js
@@ -25,28 +25,40 @@ const upload = multer({
   }
 });
 
-router.get('/from/:from/count/:count', (req, res, next) => {
+router.get('/', (req, res, next) => {
   /**
-   * #swagger.tags = ['Files - 文件相關API']
-   * #swagger.description = 'Get All Files API'
-   * #swagger.responses[200] = {
-      description: 'Response',
-      schema: {
-        "status": true,
-        "data": [{
-          "_id": "63d13d5a2782fdfa5e2f239d",
-          "signTitle": "example",
-          "fileLocation": "https://nodejs-signature-document-s3.s3.amazonaws.com/%E6%9C%80%E9%AB%98%E5%AD%B8%E7%BF%92%E6%B3%95%E5%BF%83%E5%BE%97.docx",
-          "fileName": "最高學習法心得.docx",
-          "fileKey": "最高學習法心得.docx",
-          "fileEtag": "\"15c0de85bce4f03fea5da6a77e0db16b\"",
-          "fileBucket": "nodejs-signature-document-s3",
-          "isSigned": false,
-          "date": 1681046272553,
-          "modifiedDate": 1681046272553,
-        }]
+    * #swagger.tags = ['Files - 文件相關API']
+    * #swagger.description = 'Get all files API'
+    * #swagger.parameters['from'] = {
+        in: 'query',
+        description: '從第幾筆開始',
       }
-    }
+    * #swagger.parameters['count'] = {
+        in: 'query',
+        description: '數量',
+      }
+    * #swagger.responses[200] = {
+        description: 'Response',
+        schema: {
+          "status": true,
+          "code": 200,
+          "data": {
+            "data": [{
+              "_id": "63d13d5a2782fdfa5e2f239d",
+              "signTitle": "example",
+              "fileLocation": "https://nodejs-signature-document-s3.s3.amazonaws.com/%E6%9C%80%E9%AB%98%E5%AD%B8%E7%BF%92%E6%B3%95%E5%BF%83%E5%BE%97.docx",
+              "fileName": "最高學習法心得.docx",
+              "fileKey": "最高學習法心得.docx",
+              "fileEtag": "\"15c0de85bce4f03fea5da6a77e0db16b\"",
+              "fileBucket": "nodejs-signature-document-s3",
+              "isSigned": false,
+              "date": 1681046272553,
+              "modifiedDate": 1681046272553,
+            }],
+            "size": 100
+          }
+        }
+      }
     */
   fileController.getFiles(req, res);
 });
@@ -54,23 +66,25 @@ router.get('/from/:from/count/:count', (req, res, next) => {
 router.get('/:id', (req, res, next) => {
   /**
     * #swagger.tags = ['Files - 文件相關API']
-    * #swagger.description = 'Get Single File API'
+    * #swagger.description = 'Get single file API'
     * #swagger.responses[200] = {
         description: 'Response',
         schema: {
           "status": true,
+          "code": 200,
           "data": {
-          "_id": "63d13d5a2782fdfa5e2f239d",
-          "signTitle": "example",
-          "fileLocation": "https://nodejs-signature-document-s3.s3.amazonaws.com/%E6%9C%80%E9%AB%98%E5%AD%B8%E7%BF%92%E6%B3%95%E5%BF%83%E5%BE%97.docx",
-          "fileName": "最高學習法心得.docx",
-          "fileKey": "最高學習法心得.docx",
-          "fileEtag": "\"15c0de85bce4f03fea5da6a77e0db16b\"",
-          "fileBucket": "nodejs-signature-document-s3",
-          "isSigned": false,
-          "date": 1681046272553,
-          "modifiedDate": 1681046272553,
-        }}
+            "_id": "63d13d5a2782fdfa5e2f239d",
+            "signTitle": "example",
+            "fileLocation": "https://nodejs-signature-document-s3.s3.amazonaws.com/%E6%9C%80%E9%AB%98%E5%AD%B8%E7%BF%92%E6%B3%95%E5%BF%83%E5%BE%97.docx",
+            "fileName": "最高學習法心得.docx",
+            "fileKey": "最高學習法心得.docx",
+            "fileEtag": "\"15c0de85bce4f03fea5da6a77e0db16b\"",
+            "fileBucket": "nodejs-signature-document-s3",
+            "isSigned": false,
+            "date": 1681046272553,
+            "modifiedDate": 1681046272553,
+          }
+        }
       }
     */
   fileController.getSingleFile(req, res);
@@ -79,15 +93,7 @@ router.get('/:id', (req, res, next) => {
 router.post('/', upload.array('file'), (req, res, next) => {
   /**
     * #swagger.tags = ['Files - 文件相關API']
-    * #swagger.description = 'Create Signature File API'
-    * #swagger.parameters['title'] = {
-        in: 'query',
-        description: '簽署物件標題',
-      }
-    * #swagger.parameters['isSigned'] = {
-        in: 'query',
-        description: 'isSigned文件簽署狀態',
-      }
+    * #swagger.description = 'Create signature file API'
     * #swagger.parameters['file'] = {
         in: 'formData',
         type: 'file',
@@ -98,6 +104,7 @@ router.post('/', upload.array('file'), (req, res, next) => {
         description: 'Response',
         schema: {
           "status": true,
+          "code": 200,
           "data": "Create successfully"
         }
       }
@@ -105,18 +112,34 @@ router.post('/', upload.array('file'), (req, res, next) => {
   fileController.createSignatureFile(req, res);
 });
 
-router.patch('/:id', upload.array('file'), (req, res, next) => {
+router.patch('/:id/signInfo', (req, res, next) => {
   /**
     * #swagger.tags = ['Files - 文件相關API']
-    * #swagger.description = 'Patch File API'
-    * #swagger.parameters['title'] = {
-        in: 'query',
-        description: '簽署物件標題',
+    * #swagger.description = 'Patch signature title and isSigned status API'
+    * #swagger.parameters['obj'] = {
+        in: 'body',
+        description: '簽署物件新的標題和簽署狀態',
+        schema: {
+          $title: 'new title',
+          $isSigned: true
+        }
       }
-    * #swagger.parameters['isSigned'] = {
-        in: 'query',
-        description: 'isSigned文件簽署狀態',
+    * #swagger.responses[200] = {
+        description: 'Response',
+        schema: {
+          "status": true,
+          "code": 200,
+          "data": "Update successfully"
+        }
       }
+    */
+  fileController.updateSignatureInfo(req, res);
+});
+
+router.patch('/:id/fileInfo', upload.array('file'), (req, res, next) => {
+  /**
+    * #swagger.tags = ['Files - 文件相關API']
+    * #swagger.description = 'Patch file info API'
     * #swagger.parameters['file'] = {
         in: 'formData',
         type: 'file',
@@ -126,11 +149,12 @@ router.patch('/:id', upload.array('file'), (req, res, next) => {
         description: 'Response',
         schema: {
           "status": true,
-          "data": "Update file successfully"
+          "code": 200,
+          "data": "Update successfully"
         }
       }
     */
-  fileController.updateFile(req, res);
+  fileController.updateFileInfo(req, res);
 });
 
 router.delete('/:id/filename/:filename', (req, res, next) => {
@@ -141,6 +165,7 @@ router.delete('/:id/filename/:filename', (req, res, next) => {
         description: 'Response',
         schema: {
           "status": true,
+          "code": 200,
           "data": "Delete file successfully"
         }
       }
